<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/map_fragment">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.example.debarembar.MapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_mapa" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.debarembar.view.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.debarembar.view.ui.listarBar.ListarBar"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.debarembar.view.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.debarembar.view.ui.compartilhar.CompartilharFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/cadastrarBar"
        android:name="com.example.debarembar.view.ui.cadastro.CadastroFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_cadastro" />
    <fragment
        android:id="@+id/listarBares"
        android:name="com.example.debarembar.view.ui.listarBar.ListarBar"
        android:label="activity_listar_bares"
        tools:layout="@layout/activity_listar_bares" />
</navigation>